--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-Django==1.9.2
 gunicorn==19.4.5
 whitenoise==2.0.6
 dj-database-url==0.4.0
-django-compressor==1.4
+Django==1.9.6
+django-appconf==1.0.2
+django-compressor==2.0
+mysqlclient==1.3.7
