--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,5 @@ dj-database-url==0.4.0
 Django==1.9.6
 django-appconf==1.0.2
 django-compressor==2.0
-mysqlclient==1.3.7
+mysqlclient
+django-environ
