--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,15 @@
-gunicorn==19.4.5
-whitenoise==3.0
-dj-database-url==0.4.0
+dj-database-url==0.5.0
 Django==1.9.6
 django-appconf==1.0.2
 django-compressor==2.0
-mysqlclient
-django-environ
-psycopg2-binary==2.8.3
-django-heroku
+django-environ==0.4.5
+django-heroku==0.3.1
+django-sass-processor==0.7.3
+gunicorn==19.4.5
+libsass==0.19.2
+mysqlclient==1.4.2.post1
+psycopg2==2.8.3
+rcssmin==1.0.6
+rjsmin==1.0.12
+six==1.12.0
+whitenoise==3.0
